# Luna_face_recog

./: .gitignore  BUSINESS-PLAN.md  CLA.md  COMMERCIAL-LICENSE-README.md  LICENSE  RAGLIGHT-FOUNDING-DOCUMENT.md  README.md  calib_20.csv  demography_calibration.json  freeze.txt  pyproject.toml  requirements.txt  run_api.py  setup.py  test_luna.py  test_vapor_face.db
luna_face_recog/: __init__.py  api_server.py  cli.py  luna_face.py
luna_face_recog.egg-info/: PKG-INFO  SOURCES.txt  entry_points.txt  requires.txt  top_level.txt
luna_face_recog/api/: __init__.py  app.py
luna_face_recog/commons/: __init__.py  image_utils.py  logger.py
luna_face_recog/detection/: __init__.py  face_detector.py
scripts/: benchmark_insightface.py  calibrate_demography.py  cluster_analysis.py  cluster_group_report.py  compare_packs.py  evaluate_demography.py  evaluate_recognition.py
tests/: test_basic.py
vapor_face/: __init__.py
vapor_face_mvp/: README.md  __init__.py  launch.py  main.py  requirements.txt  test_arcface_swap.py  test_core.py  test_qwen_integration.py  test_vapor_face.db
vapor_face_mvp/core/: __init__.py  arcface_encoder.py  face_extractor.py  qwen_encoder.py  semantic_ops.py  semantic_probes.py  semantic_processor.py  surgical_pruner.py  surgical_pruner_fixed.py  vector_store.py
vapor_face_mvp/experiments/: run_semantic_sweep.py
